--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+  <div id="loading">
+    <img src="./images/load.svg" alt="" width="100" height="100">
+  </div>
   <div class="relative">
     <img src="./images/824_LP05_01.png" alt="824_LP05_01.png">
     <div class="absolute slick_01">
